[project]
name = "comfyui-stylecodes"
description = "These are custom nodes for ComfyUI native implementation of stylecodes"
version = "1.0.1"
license = { text = "Apache License 2.0" }
dependencies = [
    "diffusers>=0.27.0",
    "accelerate>=0.29.0",
    "peft>=0.7.0",
    "poetry-core",
    "ruff>=0.1.0"
]

[project.urls]
Repository = "https://github.com/nullquant/ComfyUI-BrushNet"
# Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "nullquant"
DisplayName = "ComfyUI-BrushNet"
Icon = ""

[tool.ruff]
line-length = 119
# Deprecation of Cuda 11.6 and Python 3.7 support for PyTorch 2.0
target-version = "py38"
extend-exclude = ["__pycache__", "*.pyc", "*.egg-info", ".cache"]
select = ["E", "F", "W", "C90", "I", "UP", "B", "C4", "RET", "RUF", "SIM"]
ignore = [
    "UP006",    # UP006: Use list instead of typing.List for type annotations
    "UP007",    # UP007: Use X | Y for type annotations
    "UP009",
    "UP035",
    "UP038",
    "E402",
    "RET504",
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 119
skip-string-normalization = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"